# operation-systems

Cmake/: Cmake.sln
Cmake/Cmake/: CMakeLists.txt  Cmake.vcxproj  Cmake.vcxproj.filters  main.cpp
Cmake/Cmake/Debug/: Cmake.exe.recipe  vc142.idb
Cmake/Cmake/Debug/Cmake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cmake.lastbuildstate
Cmake/Cmake/Solver/: CMakeLists.txt  Solver.cpp  Solver.h
Cmake/Cmake/stack/: CMakeLists.txt
Cmake/Cmake/stack/include/: ThreadSafeStack.h
Cmake/Cmake/stack/src/: ThreadSafeStack.cpp
Producer-consumer/: Producer-consumer.sln
Producer-consumer/Producer-consumer/: Producer-consumer.vcxproj  Source.cpp
Producer-consumer/Producer-consumer/Debug/: Producer-consumer.exe.recipe  (+2 more)
Read-Write lock/Read-Write lock/: Read-Write lock.vcxproj  Source.cpp
Read-Write_lock/: Read-Write lock.sln
Read-Write_lock/Read-Write lock/: Source.cpp
poco_request/: poco_request.sln
poco_request/poco_request/: Source.cpp  page.html  poco_request.vcxproj
weatherAPI/: Source.cpp  weatherAPI.sln  weatherAPI.vcxproj
weatherAPI/Debug/: vc142.idb  weatherAPI.exe.recipe  weatherAPI.ilk  weatherAPI.vcxproj.FileListAbsolute.txt
матрицы/: матрицы.sln
матрицы/матрицы/: Source.cpp  матрицы.vcxproj
поиск подмножества с нулевой суммой/: поиск подмножества с нулевой суммой.sln
поиск подмножества с нулевой суммой/поиск подмножества с нулевой суммой/: Source.cpp  поиск подмножества с нулевой суммой.vcxproj
посик простых чисел/: посик простых чисел.sln
посик простых чисел/посик простых чисел/: Source.cpp  посик простых чисел.vcxproj
(+67 files in other folders)
